# latticelab

./: .gitignore  .gitmodules  README.md  TODO.md  meson.build
.cache/clangd/index/: generate_spinon_basis.cpp.0F09F47749601A82.idx  generate_spinon_basis.cpp.5A2C2F3B35E6C920.idx  geometry.cpp.9A1AC69D81E47A4F.idx  geometry.hpp.39BFB68D8568E638.idx  gtest-all.cc.D8CC7A4B9A124665.idx  gtest-assertion-result.cc.E8CAD53288B04650.idx  gtest-assertion-result.h.97A05F3BD92091DB.idx  gtest-death-test-internal.h.43A3A69655BC6A2C.idx  gtest-death-test.cc.0DC01A0F2CC33275.idx  gtest-death-test.h.2A49ED46A75EB120.idx  gtest-filepath.cc.C069FA4D046D6FBA.idx  gtest-filepath.h.96C4D9340A3C9F85.idx  gtest-internal-inl.h.678CCCA3DA3F096D.idx  gtest-internal.h.4507F74ED13C4AB3.idx  gtest-matchers.cc.FE34F29F858F1E39.idx  gtest-matchers.h.6FEB4C82E29C2D02.idx  gtest-message.h.09FDBCDA2F5EBECB.idx  gtest-param-test.h.9E76B0A4BA541F49.idx  gtest-param-util.h.FDA504532FF1A94F.idx  gtest-port-arch.h.3F4BF81BFCDD58C6.idx  gtest-port.cc.020B9B88B05EAF68.idx  gtest-port.h.3EA53A7126830CD0.idx  gtest-port.h.BEE2BD46E5365749.idx  gtest-printers.cc.A39BC7703311C2BD.idx  gtest-printers.h.71A818577AC26B29.idx  gtest-printers.h.C4BCF8E27A0665AA.idx  gtest-spi.h.F07C32C787B6BEB7.idx  gtest-string.h.86FEB500831D1D1E.idx  gtest-test-part.cc.CDE5F727820BA1FB.idx  gtest-test-part.h.9F4E49A8132ABF2A.idx  gtest-type-util.h.4E47235070C3C59A.idx  gtest-typed-test.cc.7B1A74FA3AA0CF44.idx  gtest-typed-test.h.6EE7049ADF00C912.idx  gtest.cc.AEDA5F00303A4252.idx  gtest.h.7F37539F86703391.idx  gtest.h.F42925FE2F95CB36.idx  gtest_pred_impl.h.CEBEA4DCDF91DAD1.idx  gtest_prod.h.50FB216ACBB9D948.idx  indextest.cc.591042FF7B9D4E04.idx  main.c.BEECDAEFCFC570A4.idx  (+3 more)
include/: SortedVectorMap.hpp  UnitCellSpecifier.hpp  basic_parser.hh  cell_geometry.hpp  chain.hpp  h5_lattice_IO.hpp  lattice_IO.hpp  meson.build  pointMap.hpp  preset_cellspecs.hpp  rationalmath.hpp  vec3.hpp
input/: primitive.toml  test.toml
interactive_tests/: bench_cellspec.cpp  bench_map_type.cpp  json_lli_test.cpp  meson.build  modtest.cpp  unitcell_spec_test.cpp  vec3test.cpp
scripts/: visualise.py  visualise_fury.py
src/: UnitCellSpecifier.cpp  generate_spinon_basis.cpp  largeS-QSI.cpp  main.cpp  meson.build  preset_cellspecs.cpp  rationalmath.cpp
src/admin/: basic_parser.hh
src/struct/: README.md  UnitCellSpecifier.cpp  UnitCellSpecifier.hpp  cell_geometry.hpp  chain.hpp  geometry.cpp  indexing.md  lattice_IO.hpp  meson.build  modulus.hpp  preset_cellspecs.cpp  preset_cellspecs.hpp  pyro_geometry.cpp  pyro_geometry.hpp  rationalmath.hpp  vec3.hpp
src/tools/: construct_diamond_lattice.cpp  construct_diluted_diamond_lattice.cpp  meson.build
tests/: cellspectest.cpp  meson.build  modtest.cpp  rationaltest.cpp
tests/struct/: cellbuildtest.cc  cellspectest.cc  meson.build  modtest.cc  rationaltest.cpp  structtest.cc
