construct_diamond_lattice = executable('dmndlat',
  ['construct_diamond_lattice.cpp'],
  dependencies: [main_deps],
  link_with: lattice_indexing_lib,
  include_directories: g_include
  )
construct_diamond_lattice = executable('dmndlat_dil',
  ['construct_diluted_diamond_lattice.cpp'],
  dependencies: [main_deps],
  link_with: lattice_indexing_lib,
  include_directories: g_include
  )
